messaging_app/messaging_app/blue_deployment.yaml
# blue_deployment.yaml
# This is the deployment for the "blue" (current) version of the application.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
        - name: messaging-app-container
          # The image for the current version of your app
          image: emmagoke/messaging-app:v1
          ports:
            - containerPort: 8000
